# Sentinel

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
crates/sentinel-audit/: Cargo.toml
crates/sentinel-audit/src/: lib.rs
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: main.rs
crates/sentinel-collector/: Cargo.toml
crates/sentinel-collector/src/: lib.rs
crates/sentinel-config/: Cargo.toml
crates/sentinel-config/src/: lib.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/src/: lib.rs
crates/sentinel-decision/: Cargo.toml
crates/sentinel-decision/src/: lib.rs
crates/sentinel-detection/: Cargo.toml
crates/sentinel-detection/src/: lib.rs
crates/sentinel-executor/: Cargo.toml
crates/sentinel-executor/src/: lib.rs
crates/sentinel-integrations-container/: Cargo.toml
crates/sentinel-integrations-container/src/: lib.rs
crates/sentinel-integrations-host/: Cargo.toml
crates/sentinel-integrations-host/src/: lib.rs
crates/sentinel-integrations-k8s/: Cargo.toml
crates/sentinel-integrations-k8s/src/: lib.rs
crates/sentinel-integrations-lb/: Cargo.toml
crates/sentinel-integrations-lb/src/: lib.rs
crates/sentinel-policy/: Cargo.toml
crates/sentinel-policy/src/: lib.rs
crates/sentinel-telemetry/: Cargo.toml
crates/sentinel-telemetry/src/: lib.rs
docs/: PRD.md  tasks.md
